--- a/crypto-tracker/package.json
+++ b/crypto-tracker/package.json
@@ -9,9 +9,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.21.1",
+    "chart.js": "^3.5.1",
     "react": "^17.0.2",
     "react-alice-carousel": "^2.5.1",
+    "react-chartjs-2": "^3.0.4",
     "react-dom": "^17.0.2",
+    "react-html-parser": "^2.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
